# tunerstudio-livi-telemetry

./: .gitattributes  .gitignore  README.it.md  README.md  dash-gauge-outputchannel-title.tsv  generated-usbmon-from-mainController.json  livi-tunerstudio-field-map.tsv
linux-python-bridge/: pyproject.toml  requirements.txt
linux-python-bridge/config/: channel-map.example.json  usbmon-frame-map.example.json
linux-python-bridge/livi_bridge/: cli.py  defaults.py  demo.py  emitter.py  mapper.py  schema.py  serial_reader.py  tunerstudio_ini.py  usbmon.py  usbmon_decoder.py
linux-python-bridge/tests/: test_demo.py  test_mapper.py  test_serial_reader.py  test_tunerstudio_ini.py  test_usbmon_decoder.py
linux-python-bridge/tools/: extract_dash_gauge_channels.py  replay_usbmon_dump.py  send_sample_udp.py  update_livi_json_from_tsv.py
tunerstudio-plugin/: build.sh  manifest.mf
tunerstudio-plugin/config/: livi-telemetry.properties
tunerstudio-plugin/src/io/fio/livi/tunerstudio/: JsonUtil.java  LiviTelemetryMapper.java  LiviTelemetryPlugin.java  PluginSettings.java  SocketIoWebSocketClient.java  TelemetryPublisher.java
